--- a/home.css
+++ b/home.css
@@ -52,10 +52,6 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.navigation-image {
-  width: 318px;
-  height: 181px;
-}
 .navigation-nav {
   flex: 0 0 auto;
   display: flex;
@@ -146,8 +142,8 @@
   height: var(--dl-size-size-xsmall);
 }
 .navigation-root-class-name {
-  top: -31px;
-  left: -5px;
+  top: 379px;
+  right: -1127px;
 }
 @media(max-width: 991px) {
   .navigation-nav {
@@ -543,6 +539,11 @@
   flex-direction: column;
   justify-content: center;
 }
+.home-image {
+  width: 412px;
+  height: 329px;
+  object-fit: cover;
+}
 .home-text {
   z-index: 100;
   box-shadow: rgb(212, 212, 212) 5px 5px 10px 0px;
@@ -573,7 +574,7 @@
   align-items: flex-start;
   flex-direction: column;
 }
-.home-image {
+.home-image01 {
   width: 648px;
   height: 659px;
   object-fit: cover;
@@ -618,27 +619,27 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.home-image1 {
+.home-image02 {
   height: 80px;
   object-fit: cover;
 }
-.home-image2 {
+.home-image03 {
   height: 80px;
   object-fit: cover;
 }
-.home-image3 {
+.home-image04 {
   height: 80px;
   object-fit: cover;
 }
-.home-image4 {
+.home-image05 {
   height: 80px;
   object-fit: cover;
 }
-.home-image5 {
+.home-image06 {
   height: 80px;
   object-fit: cover;
 }
-.home-image6 {
+.home-image07 {
   height: 80px;
   object-fit: cover;
 }
@@ -714,7 +715,7 @@
   align-items: stretch;
   flex-direction: row;
 }
-.home-image7 {
+.home-image08 {
   width: 55%;
   max-height: 950px;
   object-fit: cover;
@@ -881,7 +882,7 @@
   font-size: 42px;
   margin-bottom: 42px;
 }
-.home-image8 {
+.home-image09 {
   width: 1200px;
   height: 259px;
   object-fit: cover;
@@ -906,6 +907,10 @@
 .home-text16 {
   text-align: center;
 }
+.home-image10 {
+  width: 100px;
+  object-fit: cover;
+}
 @media(max-width: 991px) {
   .home-max-width {
     flex-direction: column;
@@ -929,7 +934,7 @@
   .home-location {
     flex-direction: column;
   }
-  .home-image7 {
+  .home-image08 {
     width: 100%;
   }
   .home-content-container1 {
@@ -961,7 +966,7 @@
   .home-numbers-container {
     grid-template-columns: 1fr 1fr;
   }
-  .home-image7 {
+  .home-image08 {
     max-height: 100%;
   }
   .home-content-container1 {
